--- a/assets/style.css
+++ b/assets/style.css
@@ -87,6 +87,11 @@ main {
     align-items: center;
     margin-bottom: 1em;
 }
+.card img {
+    width: 100%;
+    height: 400px;
+    object-fit: cover;
+}
 
 /* Pied de page */
 footer {
